# flm.py

./: .gitignore  README.md  agents.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
blog/: 20260703-01-from-script-to-system.md  20260704-01-cut-cross-entropy.md  20260705-01-init-and-the-random-baseline.md
blog/cn/: 20260703-01-from-script-to-system.md  20260704-01-cut-cross-entropy.md  20260705-01-init-and-the-random-baseline.md  glossary.md
experiments/: 100mib_4k_repo.yaml  16m_fineweb_10bt.yaml  16m_fineweb_speedrun.yaml  16m_fineweb_speedrun_smoke.yaml  16m_repo.yaml  nanogpt_speedrun.yaml
huggingface_models/: README.md
scripts/: analyze_ffn_svd.py  benchmark_repo_tokenizer_training.py  compare_repo_tokenizers.py  download_fineweb_corpus.py  download_nanogpt_speedrun_data.py  experiment_parquet_tokenizer_units.py  plot_ffn_svd.py  run_16m_fineweb_speedrun.sh  smoke_16m_fineweb_speedrun.sh  train_parquet_tokenizer.py
