[project]
name = "flm"
version = "0.1.0"
description = "LLM monorepo workspace."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
no-build-isolation-package = ["flash-attn"]
conflicts = [
  [
    { package = "flm-vllm" },
    { package = "flm-modules", extra = "nvidia" },
  ],
]

[tool.uv.sources]
flm-modules = { workspace = true }
flm-datasets = { workspace = true }
flm-llm = { workspace = true }
flm-train = { workspace = true }
flm-rl = { workspace = true }
flm-inference = { workspace = true }
flm-vllm = { workspace = true }

[dependency-groups]
dev = [
  "flm-modules",
  "flm-datasets",
  "flm-llm",
  "flm-train[tensorboard]",
  "flm-rl",
  "flm-inference",
  "flm-vllm",
  # "flash-attn>=2.8.0",
  "pytest>=8.0",
  "ruff>=0.13.0",
  "transformers>=4.50",
]

[tool.ruff]
line-length = 88
indent-width = 2
target-version = "py312"
extend-exclude = ["huggingface_models"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = [
  "packages/datasets/tests",
  "packages/llm/tests",
  "packages/modules/tests",
  "packages/rl/tests",
  "packages/train/tests",
  "packages/vllm/tests",
]
